fixed the scroll overflow of library

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -20,13 +19,10 @@ $Tachiyomi-web-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$Tachiyomi-web-theme: mat.define-light-theme((
-  color: (
-    primary: $Tachiyomi-web-primary,
-    accent: $Tachiyomi-web-accent,
-    warn: $Tachiyomi-web-warn,
-  )
-));
+$Tachiyomi-web-theme: mat.define-light-theme((color: (primary: $Tachiyomi-web-primary,
+        accent: $Tachiyomi-web-accent,
+        warn: $Tachiyomi-web-warn,
+      )));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -41,58 +37,91 @@ $Tachiyomi-web-theme: mat.define-light-theme((
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Roboto:wght@300;400&display=swap');
 
 body::-webkit-scrollbar {
-    display: none;
-    
-  }
+  display: none;
+
+}
+
 $accent: #f3b375;
-$btn_bg:#393945;
-$dark_bg:#21212d;
-$dark_bg_rgb:33 33 45;
-$dark_bg_rgb_dimmed:33 33 45/ 0.7;
+$btn_bg: #393945;
+$dark_bg: #21212d;
+$dark_bg_rgb: 33 33 45;
+$dark_bg_rgb_dimmed: 33 33 45/ 0.7;
 $navbar_color: #272435;
 $fill: #382a4e;
-$second_text:#b9b6c7;
+$second_text: #b9b6c7;
 $svgwhite: #cbc3ce;
-$text_col:#e3e0f1;
-$inter:'Inter', sans-serif;
-body{
-    transition: 0.5s ease-in;
-    // font-family: 'Inter', sans-serif;
-font-family: 'Roboto', sans-serif;
+$text_col: #e3e0f1;
+$inter: 'Inter', sans-serif;
 
-font-weight: 400;
+body {
+  transition: 0.5s ease-in;
+  // font-family: 'Inter', sans-serif;
+  font-family: 'Roboto', sans-serif;
+
+  font-weight: 400;
 }
 
-.main-header{
+.main-header {
   width: 100%;
+
   @media (min-width:768px) {
-    
-    width: min(calc(100% - 100px),90%);
+
+    width: min(calc(100% - 100px), 90%);
   }
 }
 
-.cat-tab{
-    padding: 5px;
+.cat-tab {
+  padding: 5px;
 
-    cursor: pointer;
+  cursor: pointer;
 }
-.cat-tab:hover{
-    color: $accent;
-    border-bottom: 2px solid $accent;
+
+.cat-tab:hover {
+  color: $accent;
+  border-bottom: 2px solid $accent;
 }
 
 // .cover-title{
 //     position: absolute;
 //     bottom: 5px;
 // }
-.main-header{
-    @media (min-width:768px) {
-        margin-left: 9vw;
-        
-    }
+.main-header {
+  @media (min-width:768px) {
+    margin-left: 9vw;
+
+  }
 }
-.list-area>section{
-    padding: 20px 0;
+
+.list-area>section {
+  padding: 20px 0;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  /* remove scrollbar space */
+  background: transparent;
+  /* optional: just make scrollbar invisible */
+}
